syntax = "proto3";

option csharp_namespace = "MyConfigurationServer.gRPC";

package configuration;

// The greeting service definition.
service Configuration {
  rpc GetClassroomConfiguration (ConfigurationLookupModel) returns (ConfigurationModel);

  rpc UpdateClassroomConfiguration (UpdateConfigurationRequest) returns (ConfigurationModel);

  rpc CreateClassroomConfiguration (ConfigurationModel) returns (ConfigurationModel);
}

message ConfigurationModel{
	string id = 1;
	string classroomId = 2;
	string color = 3;
}

message ConfigurationLookupModel{
	string classroomId = 1;
}

message UpdateConfigurationRequest{
	string classroomId = 1;
	string color = 2;
}
